bin/tests/snapshots/empty_list_concat__676800f4240e26802590a123362636e6_lint_json.snap
---
source: bin/tests/empty_list_concat.rs
---
[1 2 3] ++ []
---
{
  "file": "<temp_file_path>",
  "report": [
    {
      "name": "empty_list_concat",
      "note": "Unnecessary concatenation with empty list",
      "code": 23,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 1,
              "column": 1
            },
            "to": {
              "line": 1,
              "column": 14
            }
          },
          "message": "Concatenation with the empty list, `[]`, is a no-op",
          "suggestion": {
            "at": {
              "from": {
                "line": 1,
                "column": 1
              },
              "to": {
                "line": 1,
                "column": 14
              }
            },
            "fix": "[1 2 3]"
          },
          "fixable": true
        }
      ]
    }
  ]
}
