bin/tests/snapshots/empty_list_concat__676800f4240e26802590a123362636e6_lint_stderr.snap
---
source: bin/tests/empty_list_concat.rs
---
[1 2 3] ++ []
---
[empty_list_concat] Warning: Unnecessary concatenation with empty list
   ╭─[ <temp_file_path>:1:1 ]
   │
 1 │ [1 2 3] ++ []
   │ ──────┬──────  
   │       ╰──────── Concatenation with the empty list, [], is a no-op
───╯
