bin/tests/snapshots/empty_list_concat__b13b2273654200cbc2315c6ceec0dbc9_lint.snap
---
source: bin/tests/empty_list_concat.rs
---
[] ++ [] ++ []
---
[empty_list_concat] Warning: Unnecessary concatenation with empty list
   ╭─[ <temp_file_path>:1:1 ]
   │
 1 │ [] ++ [] ++ []
   │ ───────┬──────  
   │        ╰──────── Concatenation with the empty list, [], is a no-op
───╯
[empty_list_concat] Warning: Unnecessary concatenation with empty list
   ╭─[ <temp_file_path>:1:7 ]
   │
 1 │ [] ++ [] ++ []
   │       ────┬───  
   │           ╰───── Concatenation with the empty list, [], is a no-op
───╯
