bin/tests/snapshots/empty_list_concat__b13b2273654200cbc2315c6ceec0dbc9_lint_errfmt.snap
---
source: bin/tests/empty_list_concat.rs
---
[] ++ [] ++ []
---
<temp_file_path>>1:1:W:23:[empty_list_concat] Concatenation with the empty list, `[]`, is a no-op
<temp_file_path>>1:7:W:23:[empty_list_concat] Concatenation with the empty list, `[]`, is a no-op
