bin/tests/snapshots/empty_list_concat__b13b2273654200cbc2315c6ceec0dbc9_lint_json.snap
---
source: bin/tests/empty_list_concat.rs
---
[] ++ [] ++ []
---
{
  "file": "<temp_file_path>",
  "report": [
    {
      "name": "empty_list_concat",
      "note": "Unnecessary concatenation with empty list",
      "code": 23,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 1,
              "column": 1
            },
            "to": {
              "line": 1,
              "column": 15
            }
          },
          "message": "Concatenation with the empty list, `[]`, is a no-op",
          "suggestion": {
            "at": {
              "from": {
                "line": 1,
                "column": 1
              },
              "to": {
                "line": 1,
                "column": 15
              }
            },
            "fix": "[] ++ []"
          },
          "fixable": true
        }
      ]
    },
    {
      "name": "empty_list_concat",
      "note": "Unnecessary concatenation with empty list",
      "code": 23,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 1,
              "column": 7
            },
            "to": {
              "line": 1,
              "column": 15
            }
          },
          "message": "Concatenation with the empty list, `[]`, is a no-op",
          "suggestion": {
            "at": {
              "from": {
                "line": 1,
                "column": 7
              },
              "to": {
                "line": 1,
                "column": 15
              }
            },
            "fix": "[]"
          },
          "fixable": true
        }
      ]
    }
  ]
}
