bin/tests/snapshots/empty_list_concat__b6d6b2d3b0ff0b3b842e3f816ced62ca_lint_errfmt.snap
---
source: bin/tests/empty_list_concat.rs
---
[] ++ [1 2 3]
---
<temp_file_path>>1:1:W:23:[empty_list_concat] Concatenation with the empty list, `[]`, is a no-op
