bin/tests/snapshots/empty_list_concat__b6d6b2d3b0ff0b3b842e3f816ced62ca_lint_json.snap
---
source: bin/tests/empty_list_concat.rs
---
[] ++ [1 2 3]
---
{
  "file": "<temp_file_path>",
  "report": [
    {
      "name": "empty_list_concat",
      "note": "Unnecessary concatenation with empty list",
      "code": 23,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 1,
              "column": 1
            },
            "to": {
              "line": 1,
              "column": 14
            }
          },
          "message": "Concatenation with the empty list, `[]`, is a no-op",
          "suggestion": {
            "at": {
              "from": {
                "line": 1,
                "column": 1
              },
              "to": {
                "line": 1,
                "column": 14
              }
            },
            "fix": "[1 2 3]"
          },
          "fixable": true
        }
      ]
    }
  ]
}
